--- a/blog-post.html
+++ b/blog-post.html
@@ -18,8 +18,8 @@
   <!-- Plugin CSS -->
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.14.2/styles/monokai-sublime.min.css">
 
-  <!-- Theme CSS -->
-  <link id="theme-style" rel="stylesheet" href="assets/css/theme-1.css">
+  <!-- Theme CSS (local) -->
+  <link id="theme-style" rel="stylesheet" href="assets/css/theme-1.css"> 
   
 
 </head>
